[project]
name = "eurasian-lynx"
version = "0.1.0"
description = "LLM-driven Asana to Slack project-manager agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "asana>=5.0.0",
    "slack_sdk>=3.27.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eurasian_lynx"]
